Contrast on “urbanisme” category text (fixes #6)

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -389,6 +389,7 @@ body.histoire #map-infos {
 }
 body.urbanisme #map-infos {
   background-color: @urbanisme;
+  color: black;
 }
 body.architecture #map-infos {
   background-color: @architecture;
